# haskell-mooc

week2/: mastermind.hs  starman.hs
week3.hsproj/: .uuid  Compositions.hs  Datatypes.hs  _Datatypes.hsplay  lists.hs  week3.cabal
